<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <!-- Android Manifest App Name -->
    <string name="app_name" translatable="false">Aadhya Akshara</string>

    <string name="youtube_key">AIzaSyDzuRIigqZOjNBpwIESbBlvhGdNIdmHnlA</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="player_error">Error initializing YouTube player</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>
    <string-array name="spinner_elements">
        <item>Select Age</item>
        <item>2-4</item>
        <item>4-6</item>
    </string-array>

    <!-- Android Manifest Activity Names-->
    <string name="title_activity_lesson_choices" translatable="false">AlphabetLessonChoicesActivity</string>
    <string name="title_activity_vocabulary_lesson_choices" translatable="false">VocabularyLessonChoicesActivity</string>
    <string name="title_activity_vocabulary_lesson" translatable="false">VocabularyLessonActivity</string>
    <string name="title_activity_handwriting" translatable="false">HandwritingActivity</string>
    <string name="title_activity_startup_wizard" translatable="false">StartupWizardActivity</string>
    <string name="title_activity_select_language" translatable="false">SelectLanguageActivity</string>

    <!--PronunciationActivity Snackbars-->
    <string name="confidence_great">Great job!</string>
    <string name="confidence_close">Close, but try again</string>
    <string name="confidence_fail">Sorry, that is incorrect</string>

    <!--Quiz Fragment-->
    <string name="quiz_editText_hint">enter your answer</string>
    <string name="quiz_not_sure_button">Not Sure</string>
    <string name="quiz_incorrect_answer_dialog_message">"Your answer: %1$s"</string>
    <string name="quiz_correct_answer_dialog_message">"Correct answer: %1$s"</string>
    <string name="quiz_incorrect_answer_title">Incorrect Answer</string>
    <string name="quiz_blank_answer_dialog_message">Please enter an answer.</string>
    <string name="quiz_blank_answer_dialog_title">Oops!</string>
    <string name="quiz_not_sure_try_again_message">Please try again.</string>
    <string name="quiz_not_sure_dialog_title">Need a hint?</string>
    <string name="quiz_restart_button">Restart</string>
    <string name="quiz_thats_what_I_meant">That\'s what I meant</string>
    <string name="quiz_exercise_high_score_equals">"High Score = %1$s"</string>
    <string name="quiz_nested_fragment_question_number">Question %1$d of %2$d</string>

    <!--Pronunciation Nested Fragment Card -->
    <string name="pronunciation_card_prompt">"Say:"</string>
    <!--Pronunciation Nested Fragment - Google Voice Dialog Box-->
    <string name="pronunciation_google_voice_dialog_box">"Say: %1$s"</string>

    <!--Alphabet Activity-->
    <string name="alphabet_handwriting_choices_fragment_title">Handwriting</string>
    <string name="alphabet_list_fragment_title">List</string>
    <string name="alphabet_card_fragment_title">Flashcards</string>
    <string name="alphabet_activity_title">4-5 Years</string>

    <!--Reading Fragment-->
    <string name="reading_fragment_tab_english_dialog_title">English</string>
    <string name="reading_fragment_tab_translated_dialog_title">日本語</string>alphabet_activity_appBar

    <!-- Vocabulary Words Fragment -->
    <string name="vocabWordsFragment_tab_list_title">List</string>
    <string name="vocabWordsFragment_tab_flashcards_title">Flashcards</string>

    <!-- Vocabulary Lesson Main Content -->
    <string name="activity_exercise_item_button_title">Start</string>

    <!-- Alert Dialog Boxes -->
    <string name="exercise_complete_alert_dialog_title">Awesome!</string>
    <string name="exercise_complete_alert_dialog_message">You finished this exercise. Time to move on to the next one.</string>
    <string name="lesson_complete_alert_dialog_title">Lesson completed</string>
    <string name="lesson_complete_alert_dialog_message">Nice job! You finished this lesson.</string>
    <string name="quiz_exercise_complete_alert_dialog_message">You completed the quiz with a score of %1$s.</string>

    <!-- Startup Wizard -->
    <string name="activity_startup_wizard_toolbar_title">Startup Wizard</string>
    <string name="startup_wizard_alphabet_description">The alphabet lesson will teach you the sounds of each letter. The international phonetic alphabet and transliteration are provided on the back of the flashcards to help you.</string>
    <string name="startup_wizard_vocabulary_lesson_description">Vocabulary lessons are divided into four parts: vocabulary words, pronunciation, reading, and a quiz.</string>
    <string name="startup_wizard_vocab_words_description">Memorize the meaning of the vocabulary words with a list and flashcards.</string>
    <string name="startup_wizard_pronunciation_description">Google will evaluate whether your pronunciation is correct, close, or incorrect.</string>
    <string name="startup_wizard_reading_description">Test your comprehension with a reading exercise.</string>
    <string name="startup_wizard_quiz_description">Lastly, test your knowledge with a quiz!</string>

    <!-- Select Language Activity -->
    <string name="startup_wizard_select_language_prompt">Select Your Native Language</string>
    <string name="activity_select_language_toolbar_title">Select Language</string>

    <!-- Nested Exercise Fragment Buttons -->
    <string name="fragment_pronunciation_nested_next_button">Next</string>
    <string name="fragment_pronunciation_nested_previous_button">Previous</string>
    <string name="finish_button">Finish</string>
    <string name="fragment_handwriting_erase_button">Erase</string>
    <string name="activity_handwriting_toolbar_title">Handwriting</string>

    <!-- Vocabulary Lesson Choices -->
    <string name="activity_vocabularylessonchoices_please_purchase_premium_snackbar">Please purchase the premium upgrade to access this lesson.</string>

    <!-- Settings Menu -->
    <string name="settings_menu_startup_wizard">Startup Wizard</string>
    <string name="settings_menu_language">Language</string>
    <string name="settings_menu_purchase_premium">Purchase Premium</string>

    <string name="main_activity_premium_upgrade_alert_message">Thank you for upgrading to Leap Premium!</string>
    <string name="main_activity_iab_fail_message">There was an error with the in-app purchase. Please try again.</string>
    <string name="select_language_activity_toast">Please select a language to continue</string>

</resources>
